Bug 73547: Don't create child frames for an nsHTMLFrameOuterFrame, even via document.write.  r=pavlov@netscape.com, sr=jst@netscape.com